src/objects/Apttus_Config2__IncentiveAdjustmentItem__c.object
<CustomObject>
    <description>Represents an adjustment to the price of a product/service</description>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <inlineHelpText>The price adjustment amount.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentDate__c</fullName>
        <description>The adjustment date</description>
        <inlineHelpText>The adjustment date</inlineHelpText>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentReason__c</fullName>
        <description>The adjustment reason</description>
        <inlineHelpText>The adjustment reason</inlineHelpText>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Rebate Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <inlineHelpText>The price adjustment type</inlineHelpText>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Amount</fullName>
                </value>
                <value>
                    <fullName>Deduction Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The adjustment description</description>
        <inlineHelpText>The adjustment description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Incentive Adjustment Items</relationshipLabel>
        <relationshipName>IncentiveAdjustmentItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__PayoutScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated payout schedule</description>
        <inlineHelpText>ID of the associated payout schedule</inlineHelpText>
        <label>Payout Schedule</label>
        <referenceTo>Apttus_Rebate__IncentivePayoutSchedule__c</referenceTo>
        <relationshipLabel>Incentive Adjustment Items</relationshipLabel>
        <relationshipName>IncentiveAdjustmentItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Incentive Adjustment Item</label>
    <nameField>
        <displayFormat>IA-{0000000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Adjustment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>